<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_run_once"
        android:icon="@drawable/ic_action_play"
        android:orderInCategory="100"
        android:title="@string/action_run_once"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_run_continuous"
        android:icon="@drawable/ic_action_replay"
        android:orderInCategory="200"
        android:title="@string/action_run_continuous"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_stop"
        android:icon="@drawable/ic_action_stop"
        android:orderInCategory="300"
        android:title="@string/action_stop"
        app:showAsAction="always"/>

</menu>