<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/app_status_label"
        style="@style/LabelStyle"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/app_status"
        android:layout_alignParentLeft="true"
        android:text="@string/app_status_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/app_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"
        android:layout_toRightOf="@+id/app_status_label"
        android:text="@string/unknown_string_value"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/connection_status_label"
        style="@style/LabelStyle"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/connection_status"
        android:text="@string/connection_status_label" />

    <TextView
        android:id="@+id/connection_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/app_status"
        android:layout_below="@+id/app_status"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@+id/connection_status_label"
        android:text="@string/unknown_string_value" />

    <TextView
        android:id="@+id/pause_entry_label"
        style="@style/LabelStyle"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pause_value"
        android:text="@string/pause_entry_label" />

    <EditText
        android:id="@+id/pause_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/connection_status"
        android:layout_below="@+id/connection_status"
        android:layout_toRightOf="@+id/pause_entry_label"
        android:inputType="number" />

    <TextView
        android:id="@+id/send_interval_label"
        style="@style/LabelStyle"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/send_interval_value"
        android:text="@string/send_entry_label" />

    <EditText
        android:id="@+id/send_interval_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/pause_value"
        android:layout_below="@+id/pause_value"
        android:layout_toRightOf="@+id/send_interval_label"
        android:inputType="number" />

    <TextView
        android:id="@+id/choose_route_label"
        style="@style/LabelStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_interval_value"
        android:layout_marginTop="5dp"
        android:text="@string/select_route_label" />

    <Spinner
        android:id="@+id/choose_route"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_route_label" />

    <TextView
        android:id="@+id/current_location_label"
        style="@style/LabelStyle"
        android:textSize="14sp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/current_location"
        android:layout_below="@+id/choose_route"
        android:layout_marginTop="30dp"
        android:text="@string/current_location_label" />

    <TextView
        android:id="@+id/current_location"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/choose_route"
        android:layout_toRightOf="@+id/current_location_label" />

</RelativeLayout>